--- a/sampa-ui/app/globals.css
+++ b/sampa-ui/app/globals.css
@@ -82,6 +82,12 @@ body {
     --sidebar-border: 240 3.7% 15.9%;
     --sidebar-ring: 217.2 91.2% 59.8%;
   }
+  h1 {
+      @apply text-black dark:text-black;
+    }
+  h2 {
+    @apply text-black dark:text-black;
+  }
 }
 
 @layer base {
