--- a/sampa-ui/app/globals.css
+++ b/sampa-ui/app/globals.css
@@ -2,6 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
+@import 'mapbox-gl/dist/mapbox-gl.css';
+
 body {
   font-family: Arial, Helvetica, sans-serif;
 }
